steam: fix scrollbar

--- a/src/steam/other/scrollbar.styl
+++ b/src/steam/other/scrollbar.styl
@@ -1,13 +1,10 @@
 ::-webkit-scrollbar {
   &-button {
-    display: block;
+    display: initial;
   }
 
   &-thumb {
+    border: none;
     border-radius: 0;
-
-    margin: 0;
-
-    width: var(--scrollbar-size);
   }
 }
